# hybrid-orm

./: .gitignore  .pre-commit-config.yaml  README.md  mkdocs.yml  pyproject.toml
docs/: index.md
hybrid_orm/: __init__.py  base.py  config.py
tests/: test_config.py  test_hybrid_orm.py
