[tool.poetry]
name = "hybrid-orm"
version = "0.1.0"
description = "Prototype ORM with multi-database support on a hybrid cloud"
authors = ["Chris Dare <engineering@chrisdare.me>"]

[tool.poetry.dependencies]
python = "^3.9"
orm = "^0.3.1"
psycopg2 = "^2.9.3"
python-dotenv = "^0.20.0"
pydantic = "^1.9.1"
asyncpg = "^0.25.0"
anytree = "^2.8.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pre-commit = "^2.19.0"
black = "^22.3.0"
flake8 = "^4.0.1"
jupyter = "^1.0.0"
bandit = "^1.7.4"
mkdocs = "^1.3.0"
mkdocs-material = "^8.3.3"
isort = "^5.10.1"
coverage = "^6.4.1"

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 79

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
